ok. previo a eliminar tableId porque es dificil de debugear
